# PEFA

./: .gitignore  CLAUDE.md  README.md  convert.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
eml2png/: __init__.py  __main__.py  cli.py  deps.py  highlighting.py  models.py  parser.py  pipeline.py  sanitize.py  scoring.py  utils.py  web.py
eml2png/analyzers/: attachments.py  base.py  ioc_consolidator.py  links.py  sender.py  urgency.py
eml2png/api/: __init__.py  alienvault.py  base.py  gemini.py  ip_lookup.py  mxtoolbox.py  virustotal.py  whois_client.py
eml2png/renderers/: ioc.py  page.py
eml2png/renderers/widgets/: __init__.py  attachments.py  auth.py  domain_age.py  gemini.py  hop_trace.py  ip_intel.py  language.py  links.py  sender.py  threat_gauge.py  urgency.py  urlscan.py
eml2png/templates/: __init__.py
eml2png/templates/css/: base.css  interactive.css
eml2png/templates/js/: interactive.js  navigation.js
examples/: ATTENTION DEAR.html  Congratulations Dear.html  Dear Friend.html  Dear Winner_.html  File.html  Greetings to you,.html  HAPPY NEW YEAR!.html  Ihri Mithilf isch gfrogt_ Konto-Überprüefig offen Ref-E5W13XO1LE18GS1679.html  Online Bank Of Africa.html  Please I Need Your Urgent Attention. This Is Mark Gelkirchen..html  REF_- INSTRUCTION TO CREDIT YOUR ACCOUNT WITH THE SUM OF (US$25Million).html  THIS IS YOUR ATM VISA CARD..html  Text or Call +1 225 463 0148.html  URGENT RESPONSE.html  Votre colis est prêt pour la livraison.html  WELLS FARGO BANK.html  Your Funds Update!.html  original_msg.html
pefa/: constants.py  deps.py  highlighting.py  pipeline.py  sanitize.py
pefa/analyzers/: __init__.py  attachments.py  language.py  links.py  urgency.py
pefa/api/: abuseipdb.py  base.py  gemini.py  mxtoolbox.py  urlscan.py
pefa/renderers/: __init__.py  base.py  page.py
pefa/renderers/widgets/: __init__.py  attachments.py  auth.py  domain_age.py  gemini.py  ioc_lookup.py  ip_intel.py  links.py  sender.py  threat_gauge.py  urgency.py
pefa/templates/: __init__.py
pefa/templates/css/: base.css
pefa/templates/js/: interactive.js  navigation.js
samples/: ATTENTION DEAR.eml  Congratulations Dear.eml  Dear Friend.eml  Dear Winner_.eml  File.eml  Greetings to you,.eml  HAPPY NEW YEAR!.eml  Ihri Mithilf isch gfrogt_ Konto-Überprüefig offen Ref-E5W13XO1LE18GS1679.eml  Online Bank Of Africa.eml  Please I Need Your Urgent Attention. This Is Mark Gelkirchen..eml  REF_- INSTRUCTION TO CREDIT YOUR ACCOUNT WITH THE SUM OF (US$25Million).eml  THIS IS YOUR ATM VISA CARD..eml  Text or Call +1 225 463 0148.eml  URGENT RESPONSE.eml  Votre colis est prêt pour la livraison.eml  WELLS FARGO BANK.eml  Your Funds Update!.eml  original_msg.eml
