[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pefa"
version = "1.0.0"
description = "Phishing Email Forensic Analyzer — generates cyber-infographic PNGs and interactive HTML reports"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "requests",
    "python-whois",
    "playwright",
    "legacy-cgi",
    "nh3",
]

[project.scripts]
pefa = "pefa.cli:main"

[tool.setuptools.package-data]
pefa = ["templates/css/*.css", "templates/js/*.js"]
